--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -1,19 +1,20 @@
-# -*- mode: ruby -*-
-# vi: set ft=ruby :
+# -*- mode: ruby -*- # vi: set ft=ruby :
+
+props = JSON.load(IO.read('personal.json'))
 
 Vagrant::Config.run do |config|
   # All Vagrant configuration is done here. The most common configuration
   # options are documented and commented below. For a complete reference,
   # please see the online documentation at vagrantup.com.
+  config.vm.host_name = props['hostname']
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = "precise64"
 
-  config.vm.host_name = "crowbardev"
-
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
   # config.vm.box_url = "http://domain.com/path/to/above.box"
+  config.vm.box_url = "http://files.vagrantup.com/precise64.box"
 
   # Boot with a GUI so you can see the screen. (Default is headless)
   # config.vm.boot_mode = :gui
@@ -22,12 +23,13 @@ Vagrant::Config.run do |config|
   # via the IP. Host-only networks can talk to the host machine as well as
   # any other machines on the same network, but cannot be accessed (through this
   # network interface) by any external networks.
-  config.vm.network :hostonly, "192.168.124.6"
+  config.vm.network :hostonly, props['devbox_ip']
 
   # Assign this VM to a bridged network, allowing you to connect directly to a
   # network using the host's network device. This makes the VM appear as another
   # physical device on your network.
   #config.vm.network :bridged, :adapter => 'eth0'
+  config.vm.network :bridged, :bridge => props['network_bridge']
 
   # Forward a port from the guest to the host, which allows for outside
   # computers to access the VM, whereas host only networking does not.
@@ -37,26 +39,21 @@ Vagrant::Config.run do |config|
   # an identifier, the second is the path on the guest to mount the
   # folder, and the third is the path on the host to the actual folder.
   #config.vm.share_folder "v-data", "/vagrant_data", "../data"
+  config.vm.share_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :extra => 'dmode=777,fmode=777'
 
-  config.vm.customize ["modifyvm", :id, "--memory", 4096]
-  config.vm.customize ["modifyvm", :id, "--cpus", 3]
+  config.vm.customize ["modifyvm", :id, "--memory", props['ram']]
+  config.vm.customize ["modifyvm", :id, "--cpus", props['cpus']]
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding 
   # some recipes and/or roles.
-  #
+  
   config.vm.provision :chef_solo do |chef|
     #chef.recipe_url = "http://files.vagrantup.com/getting_started/cookbooks.tar.gz"
     chef.data_bags_path = "data_bags"
     chef.add_recipe "crowbar-dev"
-    #chef.cookbooks_path = "../crowbar-dev-recipes/cookbooks"
-    #chef.roles_path = "../crowbar-dev-recipes/roles"
-    #chef.data_bags_path = "../crowbar-dev-recipes/data_bags"
-    #chef.add_recipe "crowbargithub"
-    #chef.add_role "dev"
+    chef.json = {
+      :props => props
+    }
   end
-
-  #   # You may also specify custom JSON attributes:
-  #   chef.json = { :mysql_password => "foo" }
-
 end
