--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant::Config.run do |config|
   # All Vagrant configuration is done here. The most common configuration
   # options are documented and commented below. For a complete reference,
   # please see the online documentation at vagrantup.com.
-  config.vm.host_name = props['hostname']
+  config.vm.host_name = props['guest_hostname']
 
   # Every Vagrant virtual environment requires a box to build off of.
   config.vm.box = props['box_name']
@@ -24,13 +24,13 @@ Vagrant::Config.run do |config|
   # via the IP. Host-only networks can talk to the host machine as well as
   # any other machines on the same network, but cannot be accessed (through this
   # network interface) by any external networks.
-  config.vm.network :hostonly, props['devbox_ip']
+  config.vm.network :hostonly, props['guest_hostonly_ip']
 
   # Assign this VM to a bridged network, allowing you to connect directly to a
   # network using the host's network device. This makes the VM appear as another
   # physical device on your network.
   #config.vm.network :bridged, :adapter => 'eth0'
-  config.vm.network :bridged, :bridge => props['network_bridge']
+  config.vm.network :bridged, :bridge => props['host_network_bridge_interface']
 
   # Forward a port from the guest to the host, which allows for outside
   # computers to access the VM, whereas host only networking does not.
@@ -42,8 +42,8 @@ Vagrant::Config.run do |config|
   #config.vm.share_folder "v-data", "/vagrant_data", "../data"
   config.vm.share_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :extra => 'dmode=777,fmode=777'
 
-  config.vm.customize ["modifyvm", :id, "--memory", props['ram']]
-  config.vm.customize ["modifyvm", :id, "--cpus", props['cpus']]
+  config.vm.customize ["modifyvm", :id, "--memory", props['guest_ram']]
+  config.vm.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding 
