--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -40,7 +40,7 @@ Vagrant::Config.run do |config|
   # an identifier, the second is the path on the guest to mount the
   # folder, and the third is the path on the host to the actual folder.
   #config.vm.share_folder "v-data", "/vagrant_data", "../data"
-  config.vm.share_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :extra => 'dmode=777,fmode=777'
+  config.vm.share_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :create => true, :extra => 'dmode=777,fmode=777'
 
   config.vm.customize ["modifyvm", :id, "--memory", props['guest_ram']]
   config.vm.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
