--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -1,28 +1,24 @@
 {
-"box_name": "precise64",
-"box_url": "http://files.vagrantup.com/precise64.box",
-"user_email": "judd_maltin@dell.com",
-"user_sshpubkey": "",
 "guest_username": "judd",
-"user_sshpubkey_host": "judd-m6600",
-"git_user_name": "judd_maltin@dell.com",
+"user_sshpubkey": "",
+"git_user_name": "Judd Maltin",
 "git_user_email": "judd_maltin@dell.com",
 "github_id": "juddmaltin-dell",
 "github_password": "",
-"github_repo": "https://github.com/dellcloudedge/crowbar.git",
+"github_repo": "https://github.com/crowbar/crowbar.git",
 "shared_dir_guest": "/mnt/VMSharedDir/",
 "shared_dir_host": "/VMs/VMSharedDir/",
 "iso_library": "/mnt/VMSharedDir/",
 "iso_dest": "/mnt/VMSharedDir/ISOs",
-"guest_timezone": "America/New_York",
-"distro_iso_name": "",
-"distro_iso_url": "",
-"guest_hostname": "crowbar-dev",
-"guest_hostonly_ip": "192.168.124.5",
-"host_network_bridge_interface": "eth0",
 "guest_cpus": "1",
+"guest_timezone": "America/New_York",
 "guest_http_proxy": "",
 "guest_https_proxy": "",
 "guest_ram": "1024"
+"guest_hostname": "crowbar-dev",
+"guest_hostonly_ip": "192.168.124.5",
+"host_network_bridge_interface": "eth0",
+"box_name": "precise64",
+"box_url": "http://files.vagrantup.com/precise64.box",
 }
 
