--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -1,24 +1,27 @@
 {
 "guest_username": "judd",
-"user_sshpubkey": "",
+"user_sshpubkey": "charles in charge",
 "git_user_name": "Judd Maltin",
 "git_user_email": "judd_maltin@dell.com",
 "github_id": "juddmaltin-dell",
 "github_password": "",
 "github_repo": "https://github.com/crowbar/crowbar.git",
+"github_extra_remotes": {
+	"https://github.com/dellcloudedge/crowbar.git": "25"
+},
 "shared_dir_guest": "/mnt/VMSharedDir/",
 "shared_dir_host": "/VMs/VMSharedDir/",
 "iso_library": "/mnt/VMSharedDir/",
 "iso_dest": "/mnt/VMSharedDir/ISOs",
-"guest_cpus": "1",
-"guest_timezone": "America/New_York",
-"guest_http_proxy": "",
-"guest_https_proxy": "",
-"guest_ram": "1024"
 "guest_hostname": "crowbar-dev",
 "guest_hostonly_ip": "192.168.124.5",
 "host_network_bridge_interface": "eth0",
+"guest_http_proxy": "http://10.0.2.2:8123",
+"guest_https_proxy": "http://10.0.2.2:8123",
+"guest_cpus": "1",
+"guest_ram": "1024",
+"guest_timezone": "America/New_York",
+"guest_extra_packages": "",
 "box_name": "precise64",
-"box_url": "http://files.vagrantup.com/precise64.box",
+"box_url": "http://files.vagrantup.com/precise64.box"
 }
-
