--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -6,8 +6,8 @@
 "github_id": "juddmaltin-dell",
 "github_password": "",
 "github_repo": "https://github.com/crowbar/crowbar.git",
-"github_extra_remotes": {
-	"cloudedge": [ "https://github.com/dellcloudedge/crowbar.git", "25" ]
+"#github_extra_remotes": {
+	"dellcloudedge": [ "https://github.com/dellcloudedge/crowbar.git", "50" ]
 	},
 "shared_dir_guest": "/mnt/VMSharedDir/",
 "shared_dir_host": "/VMs/VMSharedDir/",
