--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -23,5 +23,11 @@
 "guest_timezone": "America/New_York",
 "guest_extra_packages": "",
 "box_name": "ubuntu64-12.04.1",
-"box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box"
+"box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
+"win_domain_username": "judd_maltin",
+"win_domain_name": "AMERICAS",
+"win_domain_password": "its the most wonderful time of the year",
+"win_domain_proxy": "proxy.us.dell.com:80",
+"polipo_mode": "work"
 }
+
