--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -58,7 +58,7 @@ Vagrant::Config.run do |config|
     #config.vbguest.auto_update = true #true by default when plugin installed
     chef.data_bags_path = "data_bags"
     chef.add_recipe "crowbar-dev::user-create"
-    if props.include?("guest_use_ntlm") && props["guest_use_cntlm"] == True 
+    if props.include?("guest_use_ntlm") && props["guest_use_cntlm"] == "true" 
          chef.add_recipe "crowbar-dev::cntlm"
     end
     chef.add_recipe "crowbar-dev::polipo"
