--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -22,7 +22,7 @@
 "guest_cpus": "1",
 "guest_ram": "1024",
 "guest_timezone": "America/New_York",
-"guest_extra_packages": "",
+"guest_extra_packages": "sshfs",
 "box_name": "ubuntu64-12.04.1",
 "box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
 "guest_use_cntlm": "",
