remove cntlm, use only normal proxies

--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -15,7 +15,7 @@
 "iso_dest": "/mnt/VMSharedDir/ISOs",
 "guest_hostname": "crowbar-dev",
 "guest_hostonly_ip": "192.168.124.5",
-"host_network_bridge_interface": "eth0",
+"host_network_bridge_interface": "wlan0",
 "guest_http_proxy": "http://127.0.0.1:8123",
 "guest_https_proxy": "http://127.0.0.1:8123",
 "guest_parent_proxy": "http://10.0.2.2:8123",
@@ -25,11 +25,6 @@
 "guest_extra_packages": "sshfs",
 "box_name": "ubuntu64-12.04.1",
 "box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
-"guest_use_cntlm": "",
-"win_domain_username": "judd_maltin",
-"win_domain_name": "AMERICAS",
-"win_domain_password": "its the most wonderful time of the year",
-"win_domain_proxy": "proxy.us.dell.com:80",
 "polipo_mode": "work",
 "rubys_to_install": "1.9.3 1.8.7",
 "ruby_default_version": "1.9.3"
