--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -2,21 +2,13 @@
 
 props = JSON.load(IO.read('personal.json'))
 
-Vagrant::Config.run do |config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
-  config.vm.host_name = props['guest_hostname']
+Vagrant::configure("2") do |config|
 
-  # Every Vagrant virtual environment requires a box to build off of.
+  config.vm.hostname = props['guest_hostname']
   config.vm.box = props['box_name']
-
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
-  # config.vm.box_url = "http://domain.com/path/to/above.box"
   config.vm.box_url = props['box_url']
   #config.vm.box_url = "http://files.vagrantup.com/precise32.box"
-
+  
   # Boot with a GUI so you can see the screen. (Default is headless)
   # config.vm.boot_mode = :gui
 
@@ -32,9 +24,11 @@ Vagrant::Config.run do |config|
   # network using the host's network device. This makes the VM appear as another
   # physical device on your network.
   #config.vm.network :bridged, :adapter => 'eth0'
-  if props.include?("host_network_bridge_interface")
-	 config.vm.network :bridged, :bridge => props['host_network_bridge_interface']
-  end
+  #if props.include?("host_network_bridge_interface")
+	 #config.vm.network :bridged, :bridge => props['host_network_bridge_interface']
+	 #config.vm.public_network props['host_network_bridge_interface']
+	# config.vm.public_network props['host_network_bridge_interface']
+  #end
 
   # Forward a port from the guest to the host, which allows for outside
   # computers to access the VM, whereas host only networking does not.
@@ -44,10 +38,17 @@ Vagrant::Config.run do |config|
   # an identifier, the second is the path on the guest to mount the
   # folder, and the third is the path on the host to the actual folder.
   #config.vm.share_folder "v-data", "/vagrant_data", "../data"
-  config.vm.share_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :create => true, :extra => 'dmode=777,fmode=777'
+  #config.vm.shared_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :create => true, :extra => 'dmode=777,fmode=777'
+  #
+  config.vm.synced_folder props['shared_dir_host'], props['shared_dir_guest']
 
-  config.vm.customize ["modifyvm", :id, "--memory", props['guest_ram']]
-  config.vm.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
+
+  config.vm.provider :virtualbox do |vb|
+    vb.name = props['guest_hostname']
+    vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
+    vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
+    vb.customize ["modifyvm", :id, "--nic2", "bridged", "--bridgeadapter2", props['host_network_bridge_interface'] ]
+  end
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
   # path, and data_bags path (all relative to this Vagrantfile), and adding 
@@ -71,3 +72,5 @@ Vagrant::Config.run do |config|
     }
   end
 end
+#  config.vm.customize ['createhd', '--filename', extra_disk_host_file, '--size', 500 * 1024]
+#  config.vm.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', 1, '--device', 0, '--type', 'hdd', '--medium', extra_disk_host_file]
