--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -9,28 +9,27 @@
 "#github_extra_remotes": {
 	"dellcloudedge": [ "https://github.com/dellcloudedge/crowbar.git", "50" ]
 	},
-"extra_disk_host_file": "/VMs/disks/large_disk.vdi",
-"#cache_dir": "/home/judd/.crowbar-build-cache/",
 "shared_dir_guest": "/mnt/VMSharedDir/",
 "shared_dir_host": "/VMs/VMSharedDir/",
-"iso_library": "/mnt/VMSharedDir/",
-"iso_dest": "/mnt/VMSharedDir/ISOs",
+"crowbar_build_cache": "/$HOME/.crowbar-build-cache/",
+"crowbar_iso_library": "/mnt/VMSharedDir/",
+"crowbar_iso_dest": "/mnt/VMSharedDir/ISOs",
 "guest_hostname": "crowbar-dev",
 "guest_hostonly_ip": "192.168.124.5",
-"host_network_bridge_interface": "wlan0",
+"proxy_mode": "work",
 "guest_http_proxy": "http://127.0.0.1:8123",
 "guest_https_proxy": "http://127.0.0.1:8123",
 "guest_parent_proxy": "http://10.0.2.2:8123",
-"guest_cpus": "1",
-"guest_ram": "1024",
+"guest_cpus": "3",
+"guest_ram": "4096",
 "guest_timezone": "America/New_York",
 "guest_extra_packages": "sshfs",
 "box_name": "ubuntu64-12.04.1",
 "box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
-"polipo_mode": "work",
-"rubys_to_install": "1.9.3 1.8.7",
-"ruby_default_version": "1.9.3",
-"extra_disk_device": "/mnt/disks/large_disk.vdi",
-"extra_disk_mount": "/mnt/crowbar_cache/"
+"#rubys_to_install": "1.9.3 1.8.7",
+"#ruby_default_version": "1.9.3",
+"#extra_disk_host_file": "/VMs/disks/large_disk.vdi",
+"#extra_disk_device": "/mnt/disks/large_disk.vdi",
+"#extra_disk_mount": "/mnt/crowbar_cache/"
 }
 
