--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -4,14 +4,11 @@ props = JSON.load(IO.read('personal.json'))
 
 Vagrant::configure("2") do |config|
 
-  config.vm.hostname = props['guest_hostname']
-  config.vm.box = props['box_name']
-  config.vm.box_url = props['box_url']
+  config.vm.hostname = "#{props['guest_hostname']}"
+  config.vm.box = "#{props['box_name']}"
+  config.vm.box_url = "#{props['box_url']}"
   #config.vm.box_url = "http://files.vagrantup.com/precise32.box"
   
-  # Boot with a GUI so you can see the screen. (Default is headless)
-  # config.vm.boot_mode = :gui
-
   # Assign this VM to a host-only network IP, allowing you to access it
   # via the IP. Host-only networks can talk to the host machine as well as
   # any other machines on the same network, but cannot be accessed (through this
@@ -44,6 +41,7 @@ Vagrant::configure("2") do |config|
 
 
   config.vm.provider :virtualbox do |vb|
+    vb.gui  = true
     vb.name = props['guest_hostname']
     vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
     vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
@@ -59,7 +57,7 @@ Vagrant::configure("2") do |config|
     #config.vbguest.auto_update = true #true by default when plugin installed
     chef.data_bags_path = "data_bags"
     chef.add_recipe "crowbar-dev::user-create"
-    chef.add_recipe "crowbar-dev::polipo"
+    chef.add_recipe "crowbar-dev::http-proxy"
     chef.add_recipe "apt"
     chef.add_recipe "crowbar-dev::ruby"
     chef.add_recipe "crowbar-dev::json"
