--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -26,7 +26,7 @@
 "guest_timezone": "America/New_York",
 "guest_extra_packages": "sshfs",
 "box_name": "ubuntu64-12.04.1",
-"box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
+"box_url": "https://dl.dropboxusercontent.com/u/9764728/boxes/vagrant-ubuntu12042-64.box",
 "polipo_mode": "work",
 "rubys_to_install": "1.9.3 1.8.7",
 "ruby_default_version": "1.9.3",
