working on suse support

--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -21,13 +21,13 @@
 "guest_http_proxy": "http://127.0.0.1:8123",
 "guest_https_proxy": "http://127.0.0.1:8123",
 "guest_parent_proxy": "http://10.0.2.2:8123",
+"proxy_mode": "work",
 "guest_cpus": "1",
 "guest_ram": "1024",
 "guest_timezone": "America/New_York",
 "guest_extra_packages": "sshfs",
 "box_name": "ubuntu64-12.04.1",
 "box_url": "https://dl.dropboxusercontent.com/u/9764728/boxes/vagrant-ubuntu12042-64.box",
-"polipo_mode": "work",
 "rubys_to_install": "1.9.3 1.8.7",
 "ruby_default_version": "1.9.3",
 "extra_disk_device": "/mnt/disks/large_disk.vdi",
