working with opensuse 12.3

--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -18,10 +18,9 @@
 "guest_hostname": "crowbar-dev",
 "guest_hostonly_ip": "192.168.124.5",
 "host_network_bridge_interface": "wlan0",
-"guest_http_proxy": "http://127.0.0.1:8123",
-"guest_https_proxy": "http://127.0.0.1:8123",
-"guest_parent_proxy": "http://10.0.2.2:8123",
-"proxy_mode": "work",
+"proxy_on": "true",
+"http_proxy": "http://10.0.2.2:8123",
+"https_proxy": "http://10.0.2.2:8123",
 "guest_cpus": "1",
 "guest_ram": "1024",
 "guest_timezone": "America/New_York",
