--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -13,9 +13,9 @@ Vagrant::configure("2") do |config|
   # via the IP. Host-only networks can talk to the host machine as well as
   # any other machines on the same network, but cannot be accessed (through this
   # network interface) by any external networks.
-  if props.include?("guest_hostonly_ip") 
-	 config.vm.network :hostonly, props['guest_hostonly_ip']
-  end
+  #if props.include?("guest_hostonly_ip") 
+	# config.vm.network :hostonly, props['guest_hostonly_ip']
+  #end
 
   # Assign this VM to a bridged network, allowing you to connect directly to a
   # network using the host's network device. This makes the VM appear as another
@@ -37,15 +37,14 @@ Vagrant::configure("2") do |config|
   #config.vm.share_folder "v-data", "/vagrant_data", "../data"
   #config.vm.shared_folder "share", props['shared_dir_guest'], props['shared_dir_host'], :create => true, :extra => 'dmode=777,fmode=777'
   #
-  config.vm.synced_folder props['shared_dir_host'], props['shared_dir_guest']
+  #config.vm.synced_folder props['shared_dir_host'], props['shared_dir_guest']
 
 
   config.vm.provider :virtualbox do |vb|
     vb.gui  = true
     vb.name = props['guest_hostname']
     vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
-    vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
-    vb.customize ["modifyvm", :id, "--nic2", "bridged", "--bridgeadapter2", props['host_network_bridge_interface'] ]
+    #vb.customize ["modifyvm", :id, "--nic2", "bridged", "--bridgeadapter2", props['host_network_bridge_interface'] ]
   end
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
@@ -57,11 +56,10 @@ Vagrant::configure("2") do |config|
     #vagrant plugin install vagrant-vbguest
     config.vbguest.auto_update = true #true by default when plugin installed
     chef.data_bags_path = "data_bags"
+    chef.add_recipe "crowbar-dev::basic-packages"
     chef.add_recipe "crowbar-dev::user-create"
-    chef.add_recipe "crowbar-dev::http-proxy-server"
     chef.add_recipe "crowbar-dev::http-proxy-client"
     chef.add_recipe "crowbar-dev::package-repo"
-    chef.add_recipe "crowbar-dev::basic-packages"
     chef.add_recipe "crowbar-dev::ruby"
     chef.add_recipe "crowbar-dev::json"
     chef.add_recipe "crowbar-dev::crowbar-1-source-and-build-prep"
