--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant::configure("2") do |config|
 
   config.vm.hostname = "#{props['guest_hostname']}"
   config.vm.box = "#{props['box_name']}"
-  config.vm.box_url = "#{props['box_url']}"
+#  config.vm.box_url = "#{props['box_url']}"
   #config.vm.box_url = "http://files.vagrantup.com/precise32.box"
   
   # Assign this VM to a host-only network IP, allowing you to access it
@@ -65,6 +65,7 @@ Vagrant::configure("2") do |config|
     chef.add_recipe "crowbar-dev::basic-packages"
     chef.add_recipe "crowbar-dev::ruby"
     chef.add_recipe "crowbar-dev::json"
+    chef.add_recipe "crowbar-dev::chef-tools"
     chef.add_recipe "crowbar-dev::crowbar-1-source-and-build-prep"
     chef.add_recipe "crowbar-dev::crowbar-2-dev-setup-fetch-sync"
     chef.add_recipe "crowbar-dev::crowbar-3-add-remotes"
