--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -1,52 +1,32 @@
 {
 "guest_username": "judd",
-"user_sshpubkey": "charles in charge",
+"user_sshpubkey": "ssh-rsa <your key here> judd@judd-m6600",
 "git_user_name": "Judd Maltin",
 "git_user_email": "judd_maltin@dell.com",
 "github_id": "juddmaltin-dell",
-"github_password": "",
+"github_password": "this_is_a_bad_password_no_kidding111",
 "github_repo": "https://github.com/crowbar/crowbar.git",
 "#github_extra_remotes": {
 	"dellcloudedge": [ "https://github.com/dellcloudedge/crowbar.git", "50" ]
-	},
-"shared_dir_guest": "/mnt/VMSharedDir/",
-"shared_dir_host": "/VMs/VMSharedDir/",
-"crowbar_build_cache": "/$HOME/.crowbar-build-cache/",
+},
+"synced_dir_guest": "/mnt/VMSharedDir/",
+"synced_dir_host": "/VMs/VMSharedDir/",
+"crowbar_build_cache": "/mnt/VMSharedDir/.crowbar-build-cache/",
 "crowbar_iso_library": "/mnt/VMSharedDir/",
 "crowbar_iso_dest": "/mnt/VMSharedDir/ISOs",
-"guest_hostname": "crowbar-dev",
-"guest_hostonly_ip": "192.168.124.5",
-<<<<<<< HEAD
-"host_network_bridge_interface": "wlan0",
+"guest_hostname": "crowbardev",
+"#guest_hostonly_ip": "192.168.124.5",
+"host_network_bridge_interface": "eth0",
 "proxy_on": "true",
-"http_proxy": "http://10.0.2.2:8123",
-"https_proxy": "http://10.0.2.2:8123",
-"guest_cpus": "1",
-"guest_ram": "1024",
-"guest_timezone": "America/New_York",
-"guest_extra_packages": "sshfs",
-"box_name": "ubuntu64-12.04.1",
-"box_url": "https://dl.dropboxusercontent.com/u/9764728/boxes/vagrant-ubuntu12042-64.box",
-"rubys_to_install": "1.9.3 1.8.7",
-"ruby_default_version": "1.9.3",
-"extra_disk_device": "/mnt/disks/large_disk.vdi",
-"extra_disk_mount": "/mnt/crowbar_cache/"
-=======
-"proxy_mode": "work",
-"guest_http_proxy": "http://127.0.0.1:8123",
-"guest_https_proxy": "http://127.0.0.1:8123",
-"guest_parent_proxy": "http://10.0.2.2:8123",
+"http_proxy": "http://10.0.2.2:8123/",
+"https_proxy": "http://10.0.2.2:8123/",
 "guest_cpus": "3",
-"guest_ram": "4096",
+"guest_ram": "3096",
 "guest_timezone": "America/New_York",
-"guest_extra_packages": "sshfs",
-"box_name": "ubuntu64-12.04.1",
-"box_url": "https://dl.dropbox.com/u/9764728/boxes/ubuntu64-12.04.1.box",
+"guest_extra_packages": "rubygem-foodcritic",
+"box_name": "opensuse-12.3-chef",
+"#box_url": "https://googledrive.com/host/0B6uHJ6DBTZtFcmwyd0dPVVhKcUk/opensuse-12.3-chef.box",
+"#box_url": "https://dl.dropboxusercontent.com/u/9764728/boxes/vagrant-ubuntu12042-64.box",
 "#rubys_to_install": "1.9.3 1.8.7",
-"#ruby_default_version": "1.9.3",
-"#extra_disk_host_file": "/VMs/disks/large_disk.vdi",
-"#extra_disk_device": "/mnt/disks/large_disk.vdi",
-"#extra_disk_mount": "/mnt/crowbar_cache/"
->>>>>>> 9fc852aa0c510371552b597ad1558cfc418263cc
+"#ruby_default_version": "1.9.3"
 }
-
