--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -24,7 +24,8 @@
 "guest_ram": "3096",
 "guest_timezone": "America/New_York",
 "guest_extra_packages": "rubygem-foodcritic",
-"box_name": "opensuse-12.3-chef",
+"#box_name": "opensuse-12.3-chef",
+"#box_name": "vagrant-ubuntu12042-64",
 "#box_url": "https://googledrive.com/host/0B6uHJ6DBTZtFcmwyd0dPVVhKcUk/opensuse-12.3-chef.box",
 "#box_url": "https://dl.dropboxusercontent.com/u/9764728/boxes/vagrant-ubuntu12042-64.box",
 "#rubys_to_install": "1.9.3 1.8.7",
