--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant::configure("2") do |config|
 
   config.vm.hostname = "#{props['guest_hostname']}"
   config.vm.box = "#{props['box_name']}"
-#  config.vm.box_url = "#{props['box_url']}"
+  config.vm.box_url = "#{props['box_url']}"
   #config.vm.box_url = "http://files.vagrantup.com/precise32.box"
   
   # Assign this VM to a host-only network IP, allowing you to access it
