--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -46,7 +46,7 @@ Vagrant::configure("2") do |config|
     vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
     # cool stuff!
     # install the plugin:  vagrant plugin install vagrant-vbguest 
-    config.vbguest.auto_update = true #true by default when plugin installed
+    config.vbguest.auto_update = false #true by default when plugin installed
   end
 
   # Enable provisioning with chef solo, specifying a cookbooks path, roles
