--- a/vagrant_crowbar/personal.json.example
+++ b/vagrant_crowbar/personal.json.example
@@ -14,6 +14,7 @@
 "crowbar_build_cache": "/mnt/VMSharedDir/.crowbar-build-cache/",
 "crowbar_iso_library": "/mnt/VMSharedDir/",
 "crowbar_iso_dest": "/mnt/VMSharedDir/ISOs",
+"crowbar_version": "2",
 "guest_hostname": "crowbardev",
 "#guest_hostonly_ip": "192.168.124.5",
 "host_network_bridge_interface": "eth0",
@@ -31,3 +32,4 @@
 "#rubys_to_install": "1.9.3 1.8.7",
 "#ruby_default_version": "1.9.3"
 }
+
