--- a/vagrant_crowbar/Vagrantfile
+++ b/vagrant_crowbar/Vagrantfile
@@ -36,6 +36,7 @@ Vagrant::configure("2") do |config|
   #
   config.vm.synced_folder props['synced_dir_host'], props['synced_dir_guest']
 
+  #config.vagrant-proxy
 
   config.vm.provider :virtualbox do |vb|
     vb.gui  = true
