--- a/vagrant-crowbar-2/Vagrantfile
+++ b/vagrant-crowbar-2/Vagrantfile
@@ -1,114 +1,48 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+props = JSON.load(IO.read('personal.json'))
+
 Vagrant.configure("2") do |config|
-  # All Vagrant configuration is done here. The most common configuration
-  # options are documented and commented below. For a complete reference,
-  # please see the online documentation at vagrantup.com.
 
-  # Every Vagrant virtual environment requires a box to build off of.
-  config.vm.box = "ubuntu-12.04.2-docker"
+  config.vm.define :cb2dev do |cb2dev|
 
-  # The url from where the 'config.vm.box' box will be fetched if it
-  # doesn't already exist on the user's system.
-  # config.vm.box_url = "http://domain.com/path/to/above.box"
+    cb2dev.vm.hostname = "#{props['guest_hostname']}" 
+    cb2dev.vm.box = "#{props['box_name']}" 
+    cb2dev.vm.box_url = "#{props['box_url']}" 
+    cb2dev.vm.network :public_network
+    cb2dev.vm.synced_folder props['synced_dir_host'], props['synced_dir_guest']
 
-  # Create a forwarded port mapping which allows access to a specific port
-  # within the machine from a port on the host machine. In the example below,
-  # accessing "localhost:8080" will access port 80 on the guest machine.
-  # config.vm.network :forwarded_port, guest: 80, host: 8080
+    cb2dev.vm.provider :virtualbox do |vb|
+      vb.gui  = true
+      vb.name = "#{props['guest_hostname']}"
+      vb.customize ["modifyvm", :id, "--cpus", props['guest_cpus']]
+      vb.customize ["modifyvm", :id, "--memory", props['guest_ram']]
+      vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+      # cool stuff!
+      # install the plugin:  vagrant plugin install vagrant-vbguest 
+      config.vbguest.auto_update = false #true by default when plugin installed
+    end
 
-  # Create a private network, which allows host-only access to the machine
-  # using a specific IP.
-  #config.vm.network :private_network, ip: "192.168.33.10"
+    cb2dev.ssh.timeout = 600
+    cb2dev.ssh.max_tries = 600
 
-  # Create a public network, which generally matched to bridged network.
-  # Bridged networks make the machine appear as another physical device on
-  # your network.
-  config.vm.network :public_network
-
-  # Share an additional folder to the guest VM. The first argument is
-  # the path on the host to the actual folder. The second argument is
-  # the path on the guest to mount the folder. And the optional third
-  # argument is a set of non-required options.
-  # config.vm.synced_folder "../data", "/vagrant_data"
-
-  # Provider-specific configuration so you can fine-tune various
-  # backing providers for Vagrant. These expose provider-specific options.
-  # Example for VirtualBox:
-  #
-  config.vm.provider :virtualbox do |vb|
-  #   # Don't boot with headless mode
-    vb.gui = true
+    cb2dev.vm.provision :chef_solo do |chef|
+      #chef.attempts = 10
+      chef.json = { :props => props }
+      chef.cookbooks_path = "chef/cookbooks/"
+      chef.roles_path = "chef/roles"
+      chef.data_bags_path = "chef/data_bags"
+      chef.add_recipe "cb2::create-user"
+      chef.add_recipe "cb2::http-proxy-client"
+      chef.add_recipe "cb2::package-repo"
+      chef.add_recipe "cb2::ruby"
+      chef.add_recipe "cb2::json"
+      chef.add_recipe "cb2::chef-tools"
+      chef.add_recipe "cb2::crowbar-1-source-and-build-prep"
+      chef.add_recipe "cb2::crowbar-2-dev-setup-fetch-sync"
+      chef.add_recipe "cb2::crowbar-3-add-remotes"
+      chef.add_recipe "cb2::final"
+    end
   end
-  #
-  #   # Use VBoxManage to customize the VM. For example to change memory:
-  #   vb.customize ["modifyvm", :id, "--memory", "1024"]
-  # end
-  #
-  # View the documentation for the provider you're using for more
-  # information on available options.
-
-  # Enable provisioning with Puppet stand alone.  Puppet manifests
-  # are contained in a directory path relative to this Vagrantfile.
-  # You will need to create the manifests directory and a manifest in
-  # the file base.pp in the manifests_path directory.
-  #
-  # An example Puppet manifest to provision the message of the day:
-  #
-  # # group { "puppet":
-  # #   ensure => "present",
-  # # }
-  # # # # File { owner => 0, group => 0, mode => 0644 }
-  # #
-  # # file { '/etc/motd':
-  # #   content => "Welcome to your Vagrant-built virtual machine!
-  # #               Managed by Puppet.\n"
-  # # }
-  #
-  # config.vm.provision :puppet do |puppet|
-  #   puppet.manifests_path = "manifests"
-  #   puppet.manifest_file  = "init.pp"
-  # end
-
-  # Enable provisioning with chef solo, specifying a cookbooks path, roles
-  # path, and data_bags path (all relative to this Vagrantfile), and adding
-  # some recipes and/or roles.
-  #
-  config.ssh.timeout = 600
-  config.ssh.max_tries = 600
-  config.vm.provision :chef_solo do |chef|
-    chef.attempts = 10
-    chef.cookbooks_path = "chef/cookbooks/"
-    chef.roles_path = "chef/roles"
-    chef.data_bags_path = "chef/data_bags"
-    chef.add_recipe "cb2::create-user"
-    #chef.add_role "cb2"
-  
-  #   # You may also specify custom JSON attributes:
-  #   chef.json = { :mysql_password => "foo" }
-  end
-
-  # Enable provisioning with chef server, specifying the chef server URL,
-  # and the path to the validation key (relative to this Vagrantfile).
-  #
-  # The Opscode Platform uses HTTPS. Substitute your organization for
-  # ORGNAME in the URL and validation key.
-  #
-  # If you have your own Chef Server, use the appropriate URL, which may be
-  # HTTP instead of HTTPS depending on your configuration. Also change the
-  # validation key to validation.pem.
-  #
-  # config.vm.provision :chef_client do |chef|
-  #   chef.chef_server_url = "https://api.opscode.com/organizations/ORGNAME"
-  #   chef.validation_key_path = "ORGNAME-validator.pem"
-  # end
-  #
-  # If you're using the Opscode platform, your validator client is
-  # ORGNAME-validator, replacing ORGNAME with your organization name.
-  #
-  # If you have your own Chef Server, the default validation client name is
-  # chef-validator, unless you changed the configuration.
-  #
-  #   chef.validation_client_name = "ORGNAME-validator"
 end
