add some new required packages

--- a/vagrant-crowbar-2/personal.json.example
+++ b/vagrant-crowbar-2/personal.json.example
@@ -13,7 +13,7 @@
 "synced_dir_host": "/VMs/VMSharedDir/",
 "cache_dir_guest": "/export/shared-cache/",
 "cache_dir_host": "/VMs/shared-cache/",
-"crowbar_build_cache": "/export/shared-cache/",
+"crowbar_build_cache": "/opt/shared-cache/",
 "crowbar_iso_library": "/mnt/VMSharedDir/",
 "crowbar_iso_dest": "/mnt/VMSharedDir/ISOs",
 "crowbar_version": "2",
