--- a/vagrant-crowbar-2/Vagrantfile
+++ b/vagrant-crowbar-2/Vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure("2") do |config|
       vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       # cool stuff!
       # install the plugin:  vagrant plugin install vagrant-vbguest 
-      config.vbguest.auto_update = false #true by default when plugin installed
+      #config.vbguest.auto_update = false #true by default when plugin installed
     end
 
     cb2dev.vm.provision :chef_solo do |chef|
