--- a/vagrant-crowbar-2/Vagrantfile
+++ b/vagrant-crowbar-2/Vagrantfile
@@ -31,6 +31,7 @@ Vagrant.configure("2") do |config|
       chef.cookbooks_path = "chef/cookbooks/"
       chef.roles_path = "chef/roles"
       chef.data_bags_path = "chef/data_bags"
+      chef.log_level = ENV.fetch("CHEF_LOG", "warn").downcase.to_sym
 
       # recipes and cookbooks
       chef.add_recipe "cb2::create-user"
