--- a/vagrant-crowbar-2/Vagrantfile
+++ b/vagrant-crowbar-2/Vagrantfile
@@ -43,6 +43,7 @@ Vagrant.configure("2") do |config|
       chef.add_recipe "cb2::crowbar-1-source-and-build-prep"
       chef.add_recipe "cb2::crowbar-2-dev-setup-fetch-sync"
       chef.add_recipe "cb2::crowbar-3-add-remotes"
+      chef.add_recipe "cb2::crowbar-4-test-deps"
       if props['crowbar_version'] == "2" then
         chef.add_recipe "cb2::postgresql"
       end
