--- a/vagrant-crowbar-2/Vagrantfile
+++ b/vagrant-crowbar-2/Vagrantfile
@@ -28,10 +28,10 @@ Vagrant.configure("2") do |config|
     cb2dev.vm.provision :chef_solo do |chef|
       #chef.attempts = 10
       chef.json = { :props => props }
-      chef.cookbooks_path = "chef/cookbooks/"
+      chef.cookbooks_path = "chef/cookbooks"
       chef.roles_path = "chef/roles"
       chef.data_bags_path = "chef/data_bags"
-      chef.log_level = ENV.fetch("CHEF_LOG", "warn").downcase.to_sym
+      chef.log_level = ENV.fetch("CHEF_LOG", "debug").downcase.to_sym
 
       # recipes and cookbooks
       chef.add_recipe "cb2::create-user"
@@ -40,6 +40,7 @@ Vagrant.configure("2") do |config|
       chef.add_recipe "cb2::ruby"
       chef.add_recipe "cb2::json"
       chef.add_recipe "cb2::chef-tools"
+      chef.add_recipe "cb2::docker"
       chef.add_recipe "cb2::crowbar-1-source-and-build-prep"
       chef.add_recipe "cb2::crowbar-2-dev-setup-fetch-sync"
       chef.add_recipe "cb2::crowbar-3-add-remotes"
